# yawms

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: tests.yml
src/yawms/: __init__.py  rule.py  types.py  wildcard.py  workflow.py
tests/: test_workflow.py
