[project]
name = "yawms"
description = "Yet Another Workflow Management System"
authors = [{ name = "Dan Foreman-Mackey", email = "foreman.mackey@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache License" }
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]
dependencies = ["optree"]

[project.urls]
"Homepage" = "https://yawms.readthedocs.io"
"Source" = "https://github.com/dfm/yawms"
"Bug Tracker" = "https://github.com/dfm/yawms/issues"

[project.optional-dependencies]
dev = ["black", "ruff", "nox"]
test = ["pytest"]
docs = []

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/yawms/version.py"

[tool.black]
target-version = ["py38", "py39"]
line-length = 88

[tool.ruff]
src = ["src"]
line-length = 89
target-version = "py38"
select = ["F", "I", "E", "W", "YTT", "B", "Q", "PLE", "PLW"]
ignore = [
    "B023", # Allow using global variables in lambdas
]
exclude = []

[tool.ruff.isort]
combine-as-imports = true
